# openloong-dyn-control-fork

./: .gitignore  CMakeLists.txt  README.md  Tutorial.md
algorithm/: file.sh  foot_placement.cpp  foot_placement.h  gait_scheduler.cpp  gait_scheduler.h  joystick_interpreter.cpp  joystick_interpreter.h  mpc.cpp  mpc.h  pino_kin_dyn.cpp  pino_kin_dyn.h  priority_tasks.cpp  priority_tasks.h  wbc_priority.cpp  wbc_priority.h
common/: PVT_ctrl.cpp  PVT_ctrl.h  data_bus.h  data_logger.cpp  data_logger.h  joint_ctrl_config.json
demo/: float_control.cpp  jump_mpc.cpp  walk_mpc_wbc.cpp  walk_mpc_wbc_joystick.cpp  walk_wbc.cpp  walk_wbc_joystick.cpp  walk_wbc_speed_test.cpp  walk_wbc_staircase.cpp
doc/: Doxyfile  DoxygenLayout.xml  mainpage.md
doc/doxygen/html/: GLFW__callbacks_8cpp_source.html  GLFW__callbacks_8h_source.html  LPF__fst_8cpp_source.html  LPF__fst_8h_source.html  MJ__interface_8cpp_source.html  MJ__interface_8h_source.html  PVT__ctrl_8cpp_source.html  PVT__ctrl_8h_source.html  annotated.html  bezier__1D_8cpp_source.html  bezier__1D_8h_source.html  classBezier__1D-members.html  classBezier__1D.html  classDataLogger-members.html  classDataLogger.html  classFootPlacement-members.html  classFootPlacement.html  classGaitScheduler-members.html  classGaitScheduler.html  classJoyStickInterpreter-members.html  classJoyStickInterpreter.html  classLPF__Fst-members.html  classLPF__Fst.html  classMJ__Interface-members.html  classMJ__Interface.html  classMPC-members.html  classMPC.html  classPVT__Ctr-members.html  classPVT__Ctr.html  classPin__KinDyn-members.html  classPin__KinDyn.html  classPriorityTasks-members.html  classPriorityTasks.html  classRampTrajectory-members.html  classRampTrajectory.html  classUIctr-members.html  classUIctr.html  classWBC__priority-members.html  classWBC__priority.html  classWBC__priority__coll__graph.dot  (+161 more)
doc/doxygen/latex/: annotated.tex  classBezier__1D.tex  classDataLogger.tex  classFootPlacement.tex  classGaitScheduler.tex  classJoyStickInterpreter.tex  classLPF__Fst.tex  classMJ__Interface.tex  classMPC.tex  classPVT__Ctr.tex  classPin__KinDyn.tex  classPriorityTasks.tex  classRampTrajectory.tex  classUIctr.tex  classWBC__priority.tex  classWBC__priority__coll__graph.dot  classWBC__priority__coll__graph.md5  deprecated.tex  index.tex  md_README.tex  md_doc_sphinx_source_General_Develop.tex  md_doc_sphinx_source_General_Install.tex  md_doc_sphinx_source_Tutorial_Develop.tex  md_doc_sphinx_source_Tutorial_Install.tex  refman.tex  structDataBus.tex  structPin__KinDyn_1_1IkRes.tex  structTask.tex
doc/doxygen/xml/: API_2Algorithm_2index_8rst_8txt.xml  API_2Common_2index_8rst_8txt.xml  Basic_01Knowledge_8rst_8txt.xml  CMakeLists_8txt.xml  DataBus_8rst_8txt.xml  Develop_8md.xml  Develop_8md_8txt.xml  FootPlacement_8rst_8txt.xml  GLFW__callbacks_8cpp.xml  GLFW__callbacks_8h.xml  GaitSheduler_8rst_8txt.xml  Install_8md.xml  Install_8md_8txt.xml  JoyStickInterpreter_8rst_8txt.xml  LPF__fst_8cpp.xml  (+133 more)
math/: LPF_fst.cpp  LPF_fst.h  bezier_1D.cpp  bezier_1D.h  ramp_trajectory.cpp  ramp_trajectory.h  useful_math.cpp  useful_math.h
models/: AzureLoong.urdf  AzureLoong.xml  AzureLoong_float.xml  scene_staircase.xml
record/: exportVideo.txt  matlabReadDataScript.txt  plotData.m
sim_interface/: GLFW_callbacks.cpp  GLFW_callbacks.h  MJ_interface.cpp  MJ_interface.h
(+105 files in other folders)
